# boilercore

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .renovaterc.json  CHANGELOG.md  CITATION.cff  CITATION2.cff  CONTRIBUTING.md  LICENSE  README.md  boiler.code-workspace  citation.cff  dev.ps1  dvc.yaml  first-time-setup.ps1  lock-high.json  lock.json  params.yaml  pyproject.toml  pytest.ini  renovate.json
.devcontainer/: devcontainer.json
.dvc/: config
.github/: SECURITY.md  issue_template.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q-a.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  internal.yaml
.github/workflows/: ci.yml  contrib.yml  high.yml  main.yml  publish.yml  release.yml  test.yml
.tools/requirements/: requirements.txt  requirements_both.txt  requirements_ci.txt  requirements_dev.txt  requirements_nodeps.txt
.tools/scripts/: Sync-Template.ps1  local_pyrightconfig.py
changelog/: +2024-07-25T19-44-21.3764459Z.change.md  +2024-08-02T00-24-51.4761762Z.change.md  +7a776c.change.md  55.change.md  towncrier_template.md.jinja
data/: .gitignore  scripts.dvc
data/notebooks/: fit.ipynb
docs/: conf.py  contributing.md  index.md  pyproject.toml
docs/boilercore_docs/: docstrings.py  intersphinx.py  nbs.py  patch_nbs.py  settings.py  types.py
requirements/: dev.in  dvc.in  override.txt  requirements.txt  requirements_dev.txt
scripts/: Initialize-Repo.ps1  Initialize-Shell.ps1  Sync-Py.ps1  pyproject.toml
scripts/boilercore_tools/: __main__.py  add_changes.py  environment.py  sync.py
src/boilercore/: __init__.py  fits.py  hashes.py  modelfun.py  models.py  notebooks.py  paths.py  plotting.py  settings.py  settings_models.py  syms.py  testing.py  types.py  warnings.py
src/boilercore/models/: __init__.py  fit.py  geometry.py  params.py  paths.py  sync_params.py  (+2 more)
tests/: conftest.py  pyproject.toml  test_boilercore.py  test_modelfun.py  test_models.py  test_namespaces.py  test_paths.py
tests/boilercore_tests/: conftest.py  test_models.py  test_namespaces.py  test_paths.py
tests/boilercore_tests/modelfun/: conftest.py  test_modelfun.py
tests/boilercore_tests/models/: __init__.py  conftest.py  test_models.py  types.py
tests/root/data/scripts/: filt.py
(+5 files in other folders)
