[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercore_tests"
version = "0.0.0"
description = "Tests."
dependencies = [
  # ? Core testing
  "pytest-cov==5.0.0",
  "pytest-custom-exit-code==0.3.0",
  "pytest-github-actions-annotate-failures==0.2.0",
  "pytest==8.2.2",
  # ? Other
  "numpy>=1.24.4",
  "pydantic>=2.8.2",
  "seaborn==0.13.2",
  "sympy>=1.12",
  "cachier>=3.0.0",
]

[tool.fawltydeps]
deps = ["tests/pyproject.toml"]
code = ["tests/boilercore_tests"]
ignore_undeclared = [
  "boilercore_docs",
  "boilercore_tests",
  "boilercore_tools",
  "boilercore",
]
ignore_unused = [
  # ? Core testing tools or plugins
  "pytest-cov",
  "pytest-custom-exit-code",
  "pytest-github-actions-annotate-failures",
  "pytest-plt",
  "pytest",
]
